--- a/src/scss/modules/_data.scss
+++ b/src/scss/modules/_data.scss
@@ -1,76 +1,15 @@
 .data {
-  text-align: center;
-  padding-top: 42px;
 
-  @include breakpoint((max-width 500px, max-height 650px)) {
-    padding-top: 0;
-
-    .screen__text {
-      margin-bottom: 0;
-    }
+  &__title {
+    margin-bottom: 20px;
   }
 
-  &__block {
+  &__gender {
     margin: 0 auto;
-    max-width: 240px;
-    width: 100%;
-    text-align: left;
-    padding-top: 10px;
+    margin-bottom: 70px;
   }
 
-  &__field-title {
-    text-transform: uppercase;
-    font-size: rem(13px);
-    font-weight: 500;
-    margin-bottom: 5px;
-  }
-
-  &__field {
-    margin-bottom: 40px;
-    position: relative;
-
-    @include breakpoint((max-width 500px, max-height 650px)) {
-      margin-bottom: 30px;
-    }
-
-    &:last-child {
-      @include breakpoint((max-width 500px, max-height 650px)) {
-        margin-bottom: 15px;
-      }
-    }
-
-    &--invalid &-error {
-      display: block;
-    }
-
-    &-error {
-      position: absolute;
-      top: 78px;
-      left: 0;
-      color: $error-text-color;
-      font-size: rem(9px);
-      display: none;
-
-      @include breakpoint((max-width 500px, max-height 650px)) {
-        top: 65px;
-      }
-
-      span {
-        display: inline-flex;
-        justify-content: center;
-        align-items: center;
-        vertical-align: middle;
-        height: 12px;
-        width: 12px;
-        border: 1px solid #D0021B;
-        border-radius: 1px;
-        background-color: #FFFFFF;
-        font-weight: 600;
-      }
-    }
-  }
-
-  .button {
-    margin-bottom: 19px;
+  &__check {
+    margin-bottom: 25px;
   }
 }
