chore: update error color variables values

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -3,6 +3,6 @@ $base-font-size--sm: 12px;
 $base-line-height: 19px;
 
 
-$error-text-color: #D0021B;
-$error-border-color: #D0021B;
+$error-text-color: #e2102a;
+$error-border-color: #e2102a;
 $error-background-color: #FFE8E8;
