feat: add qr code component

--- a/src/scss/widget.scss
+++ b/src/scss/widget.scss
@@ -25,6 +25,7 @@
 @import './modules/welcome';
 @import './modules/slider';
 @import './modules/tips';
+@import './modules/qrcode';
 @import './modules/upload';
 @import './modules/data';
 @import './modules/gender';
