feat: split styles for upload page

--- a/src/scss/widget.scss
+++ b/src/scss/widget.scss
@@ -27,9 +27,12 @@
 @import './modules/tips';
 @import './modules/qrcode';
 @import './modules/upload';
+@import './modules/upload-block';
+@import './modules/upload-file';
 @import './modules/data';
 @import './modules/gender';
 @import './modules/height';
 @import './modules/preloader';
 @import './modules/result';
 @import './modules/help';
+@import './modules/tutorial';
