--- a/src/scss/modules/_upload.scss
+++ b/src/scss/modules/_upload.scss
@@ -1,190 +1,61 @@
 .upload {
-  max-width: 333px;
   text-align: center;
-  padding-top: 6px;
 
-  @include breakpoint((max-width 500px, max-height 650px)) {
-    .screen__text {
-      margin-bottom: 0;
+  &__title {
+    margin-bottom: 5px;
+  }
+
+  &__title-2 {
+    margin-top: 33px;
+    margin-bottom: 21px;
+  }
+
+  &__qrcode {
+    margin: 0 auto;
+    margin-top: 20px;
+  }
+
+  &__video {
+    margin-right: 35px;
+
+    &-btn {
+      border-radius: 25px;
+      width: 33px;
+      height: 33px;
+      box-shadow: 0 4px 10px 0 rgba(163,76,0,0.19);
+      border: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0;
+      margin: 0 auto;
+      padding-left: 4px;
+
+      span {
+        @include visually-hidden;
+      }
     }
+
+    p {
+      font-size: rem(11px);
+      font-weight: normal;
+      letter-spacing: 0.3px;
+      line-height: 21px;
+      text-align: center;
+      color: #F88E32;
+      margin-top: 5px;
+    }
+  }
+
+  &__block {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   &__files {
     display: flex;
     justify-content: space-between;
-    margin-top: 38px;
-    position: relative;
-
-    @include breakpoint((max-width 500px, max-height 650px)) {
-      margin-top: 20px;
-    }
-  }
-
-  &__file-block {
-    @include breakpoint((max-width 500px, max-height 650px)) {
-      width: 100%;
-    }
-
-    &:first-child {
-      @include breakpoint((max-width 500px, max-height 650px)) {
-        margin-right: 10px;
-      }
-    }
-  }
-
-  &__file-title {
-    font-size: rem(12px);
-    font-weight: 500;
-    text-transform: uppercase;
-    margin-bottom: 12px;
-  }
-
-  &__file {
-    display: flex;
-    height: 222px;
-    width: 162px;
-    border: 1px solid #000000;
-    border-radius: 3px;
-    cursor: pointer;
-
-    @include breakpoint((max-width 500px, max-height 650px)) {
-      width: 100%;
-      height: 200px;
-    }
-
-    &--invalid {
-      border-color: $error-border-color;
-      background: $error-background-color;
-    }
-  }
-
-  &__file-select-text {
-    text-decoration: underline;
-    font-size: rem(10px);
-  }
-
-  &__file-image {
-    width: 100%;
-    height: 100%;
-    flex-grow: 1;
-    display: none;
-
-    &.active {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-
-    &--placeholder img {
-
-      @include breakpoint((max-width 500px, max-height 650px)) {
-        height: 115px;
-      }
-    }
-
-    &--preview img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-  }
-
-  &__file-select-text {
-    margin-top: 10px;
-  }
-
-  &__file-validation {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    text-align: left;
-    color: #9B9B9B;
-    font-size: rem(11px);
-    margin-top: 16px;
-    margin-left: 36px;
-    opacity: 0;
-    visibility: hidden;
-
-    &.active {
-      opacity: 1;
-      visibility: visible;
-    }
-  }
-
-  &__file-validation-icon {
-    height: 9px;
-    width: 9px;
-    border-radius: 25px;
-    border: 1px solid #979797;
-    display: inline-flex;
-    justify-content: center;
-    margin-right: 5px;
-    transition: all ease 300ms;
-
-    &--valid {
-
-    }
-
-    &--invalid {
-      background: #D0021B;
-      border-color: #D0021B;
-      color: #D0021B;
-
-      .valid {
-        display: block;
-      }
-    }
-
-    img {
-      display: none;
-    }
-  }
-
-  &__file-validation-status {
-    line-height: rem(16px);
-  }
-
-  &__file-validation-status--valid &__file-validation-icon {
-    background: #7ED321;
-    border-color: #7ED321;
-
-    .valid {
-      display: block;
-    }
-  }
-
-  &__file-validation-status--invalid &__file-validation-icon {
-    background: #D0021B;
-    border-color: #D0021B;
-    color: #D0021B;
-
-    .invalid {
-      display: block;
-    }
-  }
-
-  &__file-validation-status--invalid {
-    color: #D0021B;
-  }
-
-  .button {
-    margin-top: 44px;
-  }
-
-  &__files-error {
-    @extend .data__field-error;
-    width: 100%;
-
-    &.active {
-      display: block;
-      left: 50%;
-      transform: translateX(-50%);
-      top: calc(100% + 10px);
-    }
-  }
-
-  input {
-    @include visually-hidden;
+    width: 210px;
   }
 }
