--- a/src/scss/widget.scss
+++ b/src/scss/widget.scss
@@ -36,3 +36,7 @@
 @import './modules/result';
 @import './modules/help';
 @import './modules/tutorial';
+@import './modules/soft-validation';
+@import './modules/hard-validation';
+@import './modules/not-found';
+@import './modules/image-example';
