refactor: TEMP hide outline

--- a/src/scss/components/_checkbox.scss
+++ b/src/scss/components/_checkbox.scss
@@ -36,9 +36,9 @@
     }
   }
 
-  &:focus-within &__icon {
-    outline: -webkit-focus-ring-color auto 5px;
-  }
+  // &:focus-within &__icon {
+  //   outline: -webkit-focus-ring-color auto 5px;
+  // }
 
   &.checked &__icon {
     background: #FFAB55;
