--- a/src/scss/modules/_screen.scss
+++ b/src/scss/modules/_screen.scss
@@ -15,6 +15,10 @@ $failure: $error-border-color;
   &__footer {
     margin-top: auto;
     padding-bottom: 40px;
+
+    .button {
+      margin: 0 auto;
+    }
   }
 
   &__title {
@@ -32,6 +36,7 @@ $failure: $error-border-color;
     line-height: 16px;
     text-align: center;
     margin-bottom: 30px;
+    text-transform: uppercase;
 
     span {
       &.success {
