--- a/src/scss/modules/_hard-validation.scss
+++ b/src/scss/modules/_hard-validation.scss
@@ -1,4 +1,5 @@
 .hard-validation {
+  @extend .soft-validation;
 
   &__title {
     @extend .soft-validation__title;
@@ -6,6 +7,8 @@
 
   &__text {
     @extend .soft-validation__text;
+    max-width: 320px;
+    margin: 0 auto;
   }
 
   &__image {
