--- a/src/scss/modules/_upload.scss
+++ b/src/scss/modules/_upload.scss
@@ -30,6 +30,7 @@
       padding: 0;
       margin: 0 auto;
       padding-left: 4px;
+      background: #fff;
 
       span {
         @include visually-hidden;
