--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -6,3 +6,5 @@ $base-line-height: 19px;
 $error-text-color: #e2102a;
 $error-border-color: #e2102a;
 $error-background-color: #FFE8E8;
+
+$mobile: (max-width 500px, max-height 650px);
