--- a/src/scss/modules/_welcome.scss
+++ b/src/scss/modules/_welcome.scss
@@ -3,8 +3,16 @@
   &__slider {
     margin-top: 104px;
 
+    @include breakpoint($mobile) {
+      margin-top: 84px;
+    }
+
     .slider__slide img {
       height: 284px;
+
+      @include breakpoint($mobile) {
+        height: 235px;
+      }
     }
   }
 
@@ -15,5 +23,9 @@
     font-weight: bold;
     text-transform: uppercase;
     margin-top: 31px;
+
+    @include breakpoint($mobile) {
+      margin-top: 15px;
+    }
   }
 }
