--- a/src/scss/modules/_help.scss
+++ b/src/scss/modules/_help.scss
@@ -10,6 +10,10 @@
   flex-direction: column;
   z-index: 9;
 
+  @include breakpoint($mobile) {
+    top: 40px;
+  }
+
   &.active {
     display: flex;
   }
@@ -36,6 +40,10 @@
     padding: 29px 40px 0 40px;
     overflow: auto;
     flex-grow: 1;
+
+    @include breakpoint($mobile) {
+      padding: 39px 30px 0;
+    }
 
     h2 {
       font-size: rem(15px);
