--- a/src/scss/modules/_upload-file.scss
+++ b/src/scss/modules/_upload-file.scss
@@ -9,6 +9,14 @@
   transition: all ease 300ms;
   overflow: hidden;
 
+  @include breakpoint($mobile) {
+    border: 0;
+    border-radius: 0;
+    height: 374px;
+    width: 100%;
+    max-width: 200px;
+  }
+
   &:hover {
     box-shadow: 0 4px 10px 0 rgba(0,0,0,0.11);
   }
@@ -24,6 +32,13 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+    }
+
+    &--placeholder svg {
+      @include breakpoint($mobile) {
+        width: 200px;
+        height: 374px;
+      }
     }
 
     &--preview img {
