--- a/src/scss/modules/_soft-validation.scss
+++ b/src/scss/modules/_soft-validation.scss
@@ -40,6 +40,10 @@
     flex-grow: 1;
     max-height: 145px;
 
+    @include breakpoint($mobile) {
+      max-height: 90px;
+    }
+
     li {
       counter-increment: inc;
       position: relative;
@@ -83,11 +87,22 @@
     justify-content: center;
     padding-top: 40px;
 
+    @include breakpoint($mobile) {
+      flex-direction: column;
+      align-items: center;
+      padding-top: 15px;
+    }
+
     .button {
       margin: 0;
 
       &:first-child {
         margin-right: 20px;
+
+        @include breakpoint($mobile) {
+          margin-right: 0;
+          margin-bottom: 15px;
+        }
       }
     }
   }
