--- a/src/scss/modules/_preloader.scss
+++ b/src/scss/modules/_preloader.scss
@@ -8,6 +8,10 @@
   bottom: 0;
   background: #fff;
 
+  @include breakpoint($mobile) {
+    top: 40px;
+  }
+
   &.active {
     display: flex;
     flex-direction: column;
@@ -18,6 +22,11 @@
     @extend .screen__title;
     margin-top: 48px;
     margin-bottom: 163px;
+
+    @include breakpoint($mobile) {
+      margin-top: 56px;
+      margin-bottom: 133px;
+    }
   }
 
   &__image {
@@ -25,6 +34,11 @@
     width: 117px;
     height: 117px;
     animation: spin 3s linear infinite;
+
+    @include breakpoint($mobile) {
+      width: 85px;
+      height: 85px;
+    }
   }
 }
 
