--- a/src/scss/modules/_result.scss
+++ b/src/scss/modules/_result.scss
@@ -20,6 +20,11 @@
     padding: 27px 0;
     margin: 0 auto;
 
+    @include breakpoint($mobile) {
+      max-width: 286px;
+      border: 0;
+    }
+
     b {
       font-weight: bold;
     }
@@ -32,6 +37,10 @@
     margin-bottom: 105px;
     max-width: 300px;
     position: relative;
+
+    @include breakpoint($mobile) {
+      margin-bottom: 45px;
+    }
   }
 
   &__size {
