fix: remove border radius form inputs in Safari

--- a/src/scss/modules/_height.scss
+++ b/src/scss/modules/_height.scss
@@ -45,6 +45,7 @@
     font-weight: normal;
     padding-right: 18px;
     appearance: none;
+    border-radius: 0;
 
     &:focus {
       border-color: #FFAB55;
