fix: add padding-top for scene footer element in mobile version

--- a/src/scss/modules/_tutorial.scss
+++ b/src/scss/modules/_tutorial.scss
@@ -16,7 +16,8 @@
 
     @include breakpoint($mobile) {
       margin-top: 25px;
-      padding-bottom: 107.25%;
+      padding: 0;
+      height: 375px;
     }
   }
 }
