--- a/src/scss/modules/_screen.scss
+++ b/src/scss/modules/_screen.scss
@@ -14,7 +14,13 @@ $failure: $error-border-color;
 
   &__footer {
     margin-top: auto;
+    padding-top: 40px;
     padding-bottom: 40px;
+
+    @include breakpoint($mobile) {
+      padding-top: 30px;
+      padding-bottom: 30px;
+    }
 
     .button {
       margin: 0 auto;
