--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -83,13 +83,15 @@
   &-drop__container {
     max-width: 600px;
     width: 100%;
-    max-height: 700px;
+    max-height: 705px;
     height: 100%;
     background: #fff;
 
     @include breakpoint(max-width 768px) {
       max-width: 100%;
       max-height: 100%;
+      overflow-y: auto;
+      -webkit-overflow-scrolling: touch;
     }
   }
 }
