--- a/src/scss/modules/_soft-validation.scss
+++ b/src/scss/modules/_soft-validation.scss
@@ -102,6 +102,7 @@
         @include breakpoint($mobile) {
           margin-right: 0;
           margin-bottom: 15px;
+          white-space: nowrap;
         }
       }
     }
