--- a/src/scss/modules/_upload-file.scss
+++ b/src/scss/modules/_upload-file.scss
@@ -11,14 +11,6 @@ $mobile-image-height: 360px;
   transition: all ease 300ms;
   overflow: hidden;
 
-  @include breakpoint($mobile) {
-    border: 0;
-    border-radius: 0;
-    height: $mobile-image-height;
-    width: 100%;
-    max-width: 200px;
-  }
-
   &:hover {
     box-shadow: 0 4px 10px 0 rgba(0,0,0,0.11);
   }
@@ -36,13 +28,6 @@ $mobile-image-height: 360px;
       align-items: center;
     }
 
-    &--placeholder svg {
-      @include breakpoint($mobile) {
-        width: 200px;
-        height: $mobile-image-height;
-      }
-    }
-
     &--preview img {
       width: 100%;
       height: 100%;
@@ -52,5 +37,28 @@ $mobile-image-height: 360px;
 
   input {
     @include visually-hidden;
+  }
+}
+
+.upload--is-mobile {
+  .upload-file {
+
+    @include breakpoint($mobile) {
+      border: 0;
+      border-radius: 0;
+      height: $mobile-image-height;
+      width: 100%;
+      max-width: 200px;
+    }
+
+    &__image {
+
+      &--placeholder svg {
+        @include breakpoint($mobile) {
+          width: 200px;
+          height: $mobile-image-height;
+        }
+      }
+    }
   }
 }
